components/support/url-macro/tests/invalid_url.stderr
error: relative URL without a base
 --> invalid_url.rs:8:18
  |
8 |     let _ = url!("not a url");
  |                  ^^^^^^^^^^^
